Mod Statuses (#17)
* prepare mod insert for mods that have 0 versions

* create mod_rejections table

* whoops inital migration is no bueno

* add backend for rejections

* i am scarred for life

* create status for new mod_versions

* run cargo sqlx prepare

* hopefully I won't have to deal with this later

* delete rejected version when submitting a new one

* Revert "run cargo sqlx prepare"

This reverts commit 1a79a6f1e5a7e2d88e32044ef4eb86c5fae20b2e.

* fix some random stuff

* remove some unused import

* add major version filter for versions/latest

* fix status_id not being set correctly on mod_version create

* some status fixes

* add developers and tags for ModVersion

* update spec

* remove approved status not updating info

* shut up clippy
