# openapi.yml
@@ -354,6 +354,41 @@ paths:
           $ref: "#/components/responses/NotFoundError"
         "500":
           $ref: "#/components/responses/InternalServerError"
+    put:
+      tags:
+        - mods
+      summary: Update a specific version of a mod (admin only)
+      security:
+        - bearerAuth: []
+
+      parameters:
+        - $ref: "#/components/parameters/ModID"
+        - $ref: "#/components/parameters/ModVersion"
+
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                status:
+                  $ref: "#/components/schemas/ModVersionStatus"
+                info:
+                  required: false
+                  type: string
+                  description: "Extra information about why that status was picked"
+
+      responses:
+        "204":
+          description: No Content (Mod updated)
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "403":
+          $ref: "#/components/responses/ForbiddenError"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
 
   /v1/mods/{id}/versions/{version}/download:
     get:
@@ -713,8 +748,21 @@ components:
           oneOf:
             - $ref: "#/components/schemas/GDVersionString"
             - $ref: "#/components/schemas/GDVersionObject"
+        tags:
+          type: array
+          items:
+            type: string
+
         mod_id:
           $ref: "#/components/schemas/ModID"
+
+    ModVersionStatus:
+      type: string
+      enum:
+        - approved
+        - rejected
+        - pending
+        - unlisted
 
     ModDeveloper:
       type: object
