# src/types/models/mod.rs
@@ -6,4 +6,5 @@ pub mod incompatibility;
 pub mod mod_entity;
 pub mod mod_gd_version;
 pub mod mod_version;
+pub mod mod_version_status;
 pub mod tag;
